# HW19_2

./: .env.sample  data.json  data_categories.json  data_products.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_category_date_create.py  0003_alter_product_category.py  0004_remove_category_date_create.py  0005_article.py  0006_delete_article.py  0007_version.py  0008_alter_version_sign_ver.py  0009_alter_version_number_ver_alter_version_sign_ver.py  0010_alter_version_number_ver_alter_version_product.py  0011_alter_version_product.py  0012_product_user_owner.py
catalog/templates/catalog/: article_form.html  articles.html  base.html  blog_item.html  category_list.html  contact.html  contacts.html  forms.py  index.html  product.html  product_confirm_delete.html  product_form.html  products.html  products_cat.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
materials/: admin.py  models.py  urls.py  views.py
materials/migrations/: 0001_initial.py
materials/templates/materials/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_su.py
users/migrations/: 0001_initial.py  0002_remove_user_token_user_email_verify.py  0003_remove_user_email_verify_user_verification_key.py
users/templates/users/: login.html  register.html  reset_password.html  succsess_letter.html  user_form.html  (+1 more)
(+1 files in other folders)
